[package]
name = "phonelink-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3" # web server
webbrowser = "0.5.5" # open links
notify-rust = "4" # send notifs
actix-multipart = "0.3"
futures = "0.3"
sanitize-filename = "0.3"
preferences = "^1.1.0"