[package]
name = "phonelink-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3" # web server
webbrowser = "0.8" # open links
notify-rust = "4" # send notifs
actix-multipart = "0.3"
futures = "0.3"
sanitize-filename = "0.3"
preferences = "^1.1.0"
inquire = "~0"
ansi_term = "0.12"
whoami = "1"
system_shutdown = "4"